# ds4-spark-vllm

./: .gitignore  HANDOFF.md  LICENSE  README.md  install.sh  pyproject.toml
docs/: DSV4_FLASH_2BIT_SPARK_REPORT.md
eugr_mod/mods/ds4-2bit-deepseek-v4-flash/: run-on-lmxxf.sh  run.sh
eugr_mod/recipes/: deepseek-v4-flash-ds4-q2.yaml
scripts/: audit_layer0_tensors.py  build-ds4-2bit-checkpoint.py  inspect_gguf.py  microbench_attention.py  microbench_kernels.py  patch_deepgemm_sm12.py  sanity_check_checkpoint.py  smoke-test.sh  spark_stage_a_kernel_check.py  upload-checkpoint.sh
src/ds4_hybrid_quant/: __init__.py  block_layouts.py  builder.py  dequant.py  load_completion.py  lookup_tables.py  reference.py  test_helpers.py
src/ds4_hybrid_quant/triton_kernels/: __init__.py  iq2_xxs_pair_dot.py  q2_K_accum_dot.py  q8_K_quantize.py
src/ds4_hybrid_quant/vllm_patches/: __init__.py  config.py  moe_method.py
tests/: test_against_ds4_c.py  test_builder_repack.py  test_iq2_xxs_pair_kernel.py  test_q2_K_accum_kernel.py  test_q8_K_kernel.py  test_reference.py
tests/c_harness/: Makefile  ds4_dot.c  ds4_dot_harness  main.c
