[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ds4-hybrid-quant"
version = "0.0.1"
description = "Hybrid IQ2_XXS+Q2_K+FP8 quantization for DeepSeek V4 Flash on vLLM"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "torch>=2.4",
]

[project.optional-dependencies]
triton = ["triton>=3.0"]
build = ["safetensors>=0.4", "huggingface_hub>=0.24"]
test = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]

[project.entry-points."vllm.general_plugins"]
ds4_hybrid_iq2 = "ds4_hybrid_quant.vllm_patches:register_plugin"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
